namespace ClearEyeQ.Billing.Domain.Enums;

public enum PlanTier
{
    Free = 0,
    Pro = 1,
    Premium = 2,
    Autonomous = 3
}
